# mcp-universal-crawler

./: README.md  pyproject.toml  setup.py
src/futurepedia_mcp/: server.py
